Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-114180

Incomplete gradients cause incorrect rendering result

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P2: Important P2: Important
    • 6.6.0 Beta2, 6.7.0 FF
    • 6.6
    • Graphs: 3D
    • None
    • 13ea67ada (dev), 638718fbb (6.6)

      We need a way to clear the gradient when switching colorstyle, as now, if the gradient is defined only for a part of the range (let's say from 0.5 to 0.75), the rest of the gradient (0.0...0.5 and 0.75...1.0) is wrong (from the previous gradient, by the looks of it). 

        For Gerrit Dashboard: QTBUG-114180
        # Subject Branch Project Status CR V

            tokorpip Tomi Korpipää
            tokorpip Tomi Korpipää
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes