Fix incomplete gradient rendering error

Pick-to: 6.6
Fixes: QTBUG-114180
Change-Id: I40f0801da97000d7201003fb6a0163efdc47b9c3
Reviewed-by: Jere Tuliniemi <jere.tuliniemi@qt.io>
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Kwanghyo Park <kwanghyo.park@qt.io>